# RustGraphQLServer

./: Cargo.toml  README.md
.cargo/: config.toml
prisma/: schema.prisma
prisma/migrations/20230117160023_post/: migration.sql
prisma/migrations/20230118213153_/: migration.sql
prisma/migrations/20230118220232_new/: migration.sql
prisma/migrations/20230118221658_new_12/: migration.sql
prisma/migrations/20230118222550_options/: migration.sql
prisma/migrations/20230118234746_def/: migration.sql
src/: main.rs  prisma.rs
src/controllers/: users.rs
src/graphql/: mod.rs  schema.rs  types.rs
src/graphql/mutation/: card.rs  deck.rs  mod.rs  user.rs
src/graphql/query/: card.rs  deck.rs  mod.rs  user.rs
src/schema/: health.rs  mod.rs
src/server/: mod.rs  routes.rs
src/utils/: auth.rs
