[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]

# Logging 
log = "0.4.14"
pretty_env_logger = "0.4.0"

# Async
tokio = {version = "1.24.1", features = ["full", "macros"]}

# Serialization 
serde_json = "1.0.68"

# Web
warp = "0.3.1"

# GraphQL
async-graphql = "3.0.12"
axum = "0.5.1"
async-graphql-axum = "3.0.31"
dotenv = "0.15.0"


# Prisma 
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.4" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.4" }
serde = {version = "1.0.152", features = ["derive"] }

# Auth 
bcrypt = "0.13"
jsonwebtoken = "8"
chrono = "0.4.23"
